modif google id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ resend.api.key=re_ZjWuuNTc_TLpw1Agcjh88LCD2y5Q7gHPL
 
 #social connection
 #google
-google.client.id=717734227063-r9oodur2rsfto41faaa9csmqmk2pth37.apps.googleusercontent.com
-google.client.secret=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
+google.oauth.client.id=${GOOGLE_OAUTH_CLIENT_ID}
+google.oauth.client.secret=${GOOGLE_OAUTH_CLIENT_SECRET}
 google.redirect.uri=https://b550-2a02-842a-112f-3301-45a2-8930-81-ba2a.ngrok-free.app/api/oauth/google/callback
 
 
