--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,26 @@ paypal.webhook.endpoint=https://this-is-paypal-endpoint-5.com/api/paypal/webhook
 
 
 
+#general
+cors.allowed.origin=http://localhost:5173
+
+
+#resend
+resend.api.key=re_ZjWuuNTc_TLpw1Agcjh88LCD2y5Q7gHPL
+
+
+#social connection
+#google
+google.client.id=717734227063-r9oodur2rsfto41faaa9csmqmk2pth37.apps.googleusercontent.com
+google.client.secret=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
+google.redirect.uri=https://6604-2a02-842a-112f-3301-240e-4378-11f2-43a6.ngrok-free.app/api/oauth/google/callback
+
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/paicentre
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format=true
+spring.jpa.show-sql: true
