--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-		<!--
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency> -->
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
