Code working and organized before token imp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ google.redirect.uri=https://6604-2a02-842a-112f-3301-240e-4378-11f2-43a6.ngrok-f
 spring.datasource.url=jdbc:postgresql://localhost:5432/paicentre
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=ousta
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format=true
 spring.jpa.show-sql: true
