Token response working v1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.datasource.password=ousta
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format=true
 spring.jpa.show-sql: true
+
+
+#Token
+jwt.secret.key=your-very-secure-secret-key
