Security working ok, needs some modif

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ google.redirect.uri=https://6604-2a02-842a-112f-3301-240e-4378-11f2-43a6.ngrok-f
 
 #Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/paicentre
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=postgres
 spring.datasource.password=ousta
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -46,3 +46,12 @@ spring.jpa.show-sql: true
 
 #Token
 jwt.secret.key=your-very-secure-secret-key
+
+#Routing404And403
+# Exception Handling for 404
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+# Logging for debugging
+logging.level.org.springframework.security=DEBUG
+
