--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,6 +52,14 @@ jwt.secret.key=your-very-secure-secret-key
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+
 # Logging for debugging
 logging.level.org.springframework.security=DEBUG
 
+##Logs
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+
+#camelCaseAndSnake_case
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
